--- a/.github/workflows/mram.yml
+++ b/.github/workflows/mram.yml
@@ -12,17 +12,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Collect Titanium Elite Servers
+      - name: Collect Titanium Elite (10-Server Blocks)
         run: |
           # 1. إعداد الترويسة
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > mysubs_new.txt
           echo "# BRAND: Ghazwan_Pro_Titanium" >> mysubs_new.txt
-          echo "# STATUS: IRAQ OPTIMIZED - PORT 443" >> mysubs_new.txt
+          echo "# MODE: 10-Server Block System" >> mysubs_new.txt
           echo "# UPDATE: $TIMESTAMP" >> mysubs_new.txt
           echo "###############################################" >> mysubs_new.txt
           
-          # 2. جلب السيرفرات من أقوى 5 مصادر عالمية (توسيع المصادر)
+          # 2. جلب السيرفرات من المصادر القوية
           touch raw.txt
           curl -sL "https://raw.githubusercontent.com/yebekhe/TelegramV2rayCollector/main/sub/normal/mix" >> raw.txt
           curl -sL "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt" >> raw.txt
@@ -30,23 +30,22 @@ jobs:
           curl -sL "https://raw.githubusercontent.com/barry-far/V2ray-Config/main/All_Configs_Sub.txt" >> raw.txt
           curl -sL "https://raw.githubusercontent.com/Sumbul-V2ray/v2ray-collector/main/v2ray-configs.txt" >> raw.txt
           
-          # 3. الفلترة الذكية: بورت 443 فقط (بدون شروط إضافية لضمان الامتلاء)
+          # 3. الفلترة: بورت 443 فقط وحذف الضعيف
           grep -iE ":443" raw.txt | grep -Ei "vmess|vless|trojan" | grep -iv "chillguy" | sort -u > clean.txt
 
-          # 4. حقن الهوستات (استبدال العنوان)
+          # 4. توزيع المجموعات (10 سيرفرات لكل هوست بالتناوب)
           if [ -s clean.txt ]; then
-            sed -n '1,200p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
-            sed -n '201,400p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
-            sed -n '401,600p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
-            sed -n '601,800p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
-          else
-            echo "Searching for more servers..." >> mysubs_new.txt
-          fi
-
-      - name: Push to Master
-        run: |
-          git config --global user.name "Ghazwan-Pro-Lab"
-          git config --global user.email "lab@ghazwan.pro"
-          git add mysubs_new.txt
-          git commit -m "Titanium Full Refresh $TIMESTAMP" || echo "No changes"
-          git push || echo "Push failed"
+            # المجموعة الأولى (1-10) هوست Viberout
+            sed -n '1,10p' clean.txt | sed -E 's/@[^:]+:/@viberout-lp.viber.com:/g' >> mysubs_new.txt
+            
+            # المجموعة الثانية (11-20) هوست lp.viber
+            sed -n '11,20p' clean.txt | sed -E 's/@[^:]+:/@lp.viber.com:/g' >> mysubs_new.txt
+            
+            # المجموعة الثالثة (21-30) هوست braze-images
+            sed -n '21,30p' clean.txt | sed -E 's/@[^:]+:/@braze-images.com:/g' >> mysubs_new.txt
+            
+            # المجموعة الرابعة (31-40) هوست cdn.braze
+            sed -n '31,40p' clean.txt | sed -E 's/@[^:]+:/@cdn.braze.com:/g' >> mysubs_new.txt
+            
+            # تكرار الدورة لمجموعات إضافية لضمان كثرة السيرفرات
+            sed -n '41,5
